--- a/src/Desafío_EvaluaciónML_Martin_ Martinez.ipynb
+++ b/src/Desafío_EvaluaciónML_Martin_ Martinez.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "[2 rows x 443 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -261,8 +261,47 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### DETALLE DE VARIABLES A UTILIZAR\n",
+    "\n",
+    "ysos_dep -> ingresos dependientes de cada persona\n",
+    "\n",
+    "edad -> edad de la persona\n",
+    "\n",
+    "sexo -> sexo declarado de la persona\n",
+    "\n",
+    "estrato -> estrato social al que se asocia al encuestado\n",
+    "\n",
+    "ascendencia_negra -> dato booleano que indica si el encuestado tiene ascendencia \n",
+    "negra\n",
+    "\n",
+    "estado_civil -> estado civil declarado del encuestado\n",
+    "\n",
+    "asiste_comedor -> dato booleano que indica si el encuestado consume alguna de sus \n",
+    "comidas diarias en comedor público\n",
+    "\n",
+    "seguro_privado -> dato booleano que indica si el encuestado tiene asistencia medica \n",
+    "privada\n",
+    "\n",
+    "pobre -> dato que indica si el encuestado esta por debajo de la franja de pobreza establecida por el INE\n",
+    "\n",
+    "indigente -> dato que indica si el encuestado se clasifica como indigente\n",
+    "\n",
+    "anios_educ -> años de educación formal que tiene el encuestado\n",
+    "\n",
+    "antiguedad -> antigüedad laboral del encuestado\n",
+    "\n",
+    "categoria_ocup -> categoria ocupacional del encuestado\n",
+    "\n",
+    "dimension_empresa -> cantidad de trabajadores activos de la empresa a la cual pertenence el encuestado"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +325,7 @@
        ", ordered=False)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +429,7 @@
        "1                     0.0                  0.0  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +556,7 @@
        "2  Asalariado/a público/a  De 50 personas o más   10.778956  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +665,7 @@
        "      <th>0</th>\n",
        "      <td>70.0</td>\n",
        "      <td>Hombre</td>\n",
-       "      <td>Mdeo - Bajo</td>\n",
+       "      <td>None</td>\n",
        "      <td>No</td>\n",
        "      <td>Divorciado/a</td>\n",
        "      <td>No</td>\n",
@@ -643,7 +682,7 @@
        "      <th>2</th>\n",
        "      <td>52.0</td>\n",
        "      <td>Hombre</td>\n",
-       "      <td>Interior</td>\n",
+       "      <td>None</td>\n",
        "      <td>No</td>\n",
        "      <td>Casado/a (incluye separado/a y aún no se divor...</td>\n",
        "      <td>No</td>\n",
@@ -661,9 +700,9 @@
        "</div>"
       ],
       "text/plain": [
-       "   edad    sexo      estrato ascendencia_negra  \\\n",
-       "0  70.0  Hombre  Mdeo - Bajo                No   \n",
-       "2  52.0  Hombre     Interior                No   \n",
+       "   edad    sexo estrato ascendencia_negra  \\\n",
+       "0  70.0  Hombre    None                No   \n",
+       "2  52.0  Hombre    None                No   \n",
        "\n",
        "                                        estado_civil asiste_comedor  \\\n",
        "0                                       Divorciado/a             No   \n",
@@ -678,7 +717,7 @@
        "2  Asalariado/a público/a    Empresa_grande   10.778956  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -736,11 +775,7 @@
        "      <th>categoria_ocup_Asalariado/a público/a</th>\n",
        "      <th>asiste_comedor_Sí</th>\n",
        "      <th>ascendencia_negra_Sí</th>\n",
-       "      <th>estrato_Interior</th>\n",
-       "      <th>estrato_Mdeo - Alto</th>\n",
-       "      <th>estrato_Mdeo - Bajo</th>\n",
-       "      <th>estrato_Mdeo - Medio</th>\n",
-       "      <th>estrato_Metropolitana</th>\n",
+       "      <th>estrato_None</th>\n",
        "      <th>seguro_privado_Sí</th>\n",
        "      <th>dimension_empresa_Empresa_chica</th>\n",
        "      <th>dimension_empresa_Empresa_grande</th>\n",
@@ -761,11 +796,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -787,10 +818,6 @@
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.896131</td>\n",
@@ -807,11 +834,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -830,11 +853,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -853,11 +872,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -882,40 +897,26 @@
        "3        1.0                                   0.0               0.0   \n",
        "4        0.0                                   0.0               0.0   \n",
        "\n",
-       "  ascendencia_negra_Sí estrato_Interior estrato_Mdeo - Alto  \\\n",
-       "0                  0.0              0.0                 0.0   \n",
-       "1                  0.0              1.0                 0.0   \n",
-       "2                  0.0              0.0                 1.0   \n",
-       "3                  0.0              0.0                 0.0   \n",
-       "4                  0.0              0.0                 0.0   \n",
+       "  ascendencia_negra_Sí estrato_None seguro_privado_Sí  \\\n",
+       "0                  0.0          1.0               0.0   \n",
+       "1                  0.0          1.0               0.0   \n",
+       "2                  0.0          1.0               0.0   \n",
+       "3                  0.0          1.0               0.0   \n",
+       "4                  0.0          1.0               0.0   \n",
        "\n",
-       "  estrato_Mdeo - Bajo estrato_Mdeo - Medio estrato_Metropolitana  \\\n",
-       "0                 1.0                  0.0                   0.0   \n",
-       "1                 0.0                  0.0                   0.0   \n",
-       "2                 0.0                  0.0                   0.0   \n",
-       "3                 1.0                  0.0                   0.0   \n",
-       "4                 1.0                  0.0                   0.0   \n",
+       "  dimension_empresa_Empresa_chica dimension_empresa_Empresa_grande  \\\n",
+       "0                             1.0                              0.0   \n",
+       "1                             0.0                              1.0   \n",
+       "2                             1.0                              0.0   \n",
+       "3                             1.0                              0.0   \n",
+       "4                             0.0                              0.0   \n",
        "\n",
-       "  seguro_privado_Sí dimension_empresa_Empresa_chica  \\\n",
-       "0               0.0                             1.0   \n",
-       "1               0.0                             0.0   \n",
-       "2               0.0                             1.0   \n",
-       "3               0.0                             1.0   \n",
-       "4               0.0                             0.0   \n",
-       "\n",
-       "  dimension_empresa_Empresa_grande dimension_empresa_Empresa_mediana  \\\n",
-       "0                              0.0                               0.0   \n",
-       "1                              1.0                               0.0   \n",
-       "2                              0.0                               0.0   \n",
-       "3                              0.0                               0.0   \n",
-       "4                              0.0                               1.0   \n",
-       "\n",
-       "       edad anios_educ antiguedad  \\\n",
-       "0   2.29169  -1.207866  -0.164103   \n",
-       "1  0.896131  -1.207866    2.43851   \n",
-       "2  0.120821   0.966088  -0.892834   \n",
-       "3 -0.887083  -0.773075   -0.78873   \n",
-       "4 -0.266835  -1.207866  -0.476416   \n",
+       "  dimension_empresa_Empresa_mediana      edad anios_educ antiguedad  \\\n",
+       "0                               0.0   2.29169  -1.207866  -0.164103   \n",
+       "1                               0.0  0.896131  -1.207866    2.43851   \n",
+       "2                               0.0  0.120821   0.966088  -0.892834   \n",
+       "3                               0.0 -0.887083  -0.773075   -0.78873   \n",
+       "4                               1.0 -0.266835  -1.207866  -0.476416   \n",
        "\n",
        "                                        estado_civil pobre indigente  \\\n",
        "0                                       Divorciado/a   0.0       0.0   \n",
@@ -932,7 +933,7 @@
        "4  10.043249  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1003,7 @@
        "      <th>0</th>\n",
        "      <td>70.0</td>\n",
        "      <td>Hombre</td>\n",
-       "      <td>Mdeo - Bajo</td>\n",
+       "      <td>None</td>\n",
        "      <td>No</td>\n",
        "      <td>Divorciado/a</td>\n",
        "      <td>No</td>\n",
@@ -1019,7 +1020,7 @@
        "      <th>2</th>\n",
        "      <td>52.0</td>\n",
        "      <td>Hombre</td>\n",
-       "      <td>Interior</td>\n",
+       "      <td>None</td>\n",
        "      <td>No</td>\n",
        "      <td>Casado/a (incluye separado/a y aún no se divor...</td>\n",
        "      <td>No</td>\n",
@@ -1037,9 +1038,9 @@
        "</div>"
       ],
       "text/plain": [
-       "   edad    sexo      estrato ascendencia_negra  \\\n",
-       "0  70.0  Hombre  Mdeo - Bajo                No   \n",
-       "2  52.0  Hombre     Interior                No   \n",
+       "   edad    sexo estrato ascendencia_negra  \\\n",
+       "0  70.0  Hombre    None                No   \n",
+       "2  52.0  Hombre    None                No   \n",
        "\n",
        "                                        estado_civil asiste_comedor  \\\n",
        "0                                       Divorciado/a             No   \n",
@@ -1054,7 +1055,7 @@
        "2  Asalariado/a público/a    Empresa_grande   10.778956  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1108,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1153,6 +1154,87 @@
    "source": [
     "modelo_mse_test = mean_squared_error(y_test, modelo_y_test_pred)\n",
     "print(f\"Error cuadratico medio del modelo en test: \", modelo_mse_test)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Actualización 31/05/2023\n",
+    "\n",
+    "Se agregan las variables 'edad' y 'antiguedad' con el objetivo de reducir los valores de error cuadratico medio del modelo tanto en train como en test."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#variables_adicionales = ['edad']+['sexo']\n",
+    "\n",
+    "modelo_X_train2 = X_train[['anios_educ', 'edad', 'antiguedad']]\n",
+    "modelo_X_test2 = X_test[['anios_educ', 'edad', 'antiguedad']]\n",
+    "\n",
+    "modelo = reg.fit(modelo_X_train2, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# predicción en train\n",
+    "modelo_y_train_pred2 = modelo.predict(modelo_X_train2)\n",
+    "\n",
+    "# predicción en test\n",
+    "modelo_y_test_pred2 = modelo.predict(modelo_X_test2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error cuadratico medio del modelo en train:  0.4064311931175504\n"
+     ]
+    }
+   ],
+   "source": [
+    "modelo_mse_train2 = mean_squared_error(y_train, modelo_y_train_pred2)\n",
+    "print(f\"Error cuadratico medio del modelo en train: \", modelo_mse_train2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error cuadratico medio del modelo en test:  0.4113672640933097\n"
+     ]
+    }
+   ],
+   "source": [
+    "modelo_mse_test2 = mean_squared_error(y_test, modelo_y_test_pred2)\n",
+    "print(f\"Error cuadratico medio del modelo en test: \", modelo_mse_test2)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Efectivamente, agregando las variables 'edad' y 'sexo' se generan mejoras en los resultados del modelo."
    ]
   }
  ],
